--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "create-react-class": "^15.6.3",
     "nes.css": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/create-react-class": "^15.6.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "typescript": "^3.6.3"
