--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
     "nes.css": "^2.2.0",
     "react": "^16.9.0",
